# kopia-exporter

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  nfpm.yaml  pyproject.toml
.github/workflows/: docker-release.yml
grafana/: kopia-dashboard.json
packaging/: kopia-exporter.service  postinst.sh  postrm.sh  prerm.sh
src/kopia_exporter/: __init__.py  __main__.py  metrics.py
tests/: test_init.py
utils/: kopia-exporter.service  kopia_snapshot.sh
